--- a/configs/challenge_objectnav2021.local.rgbd.yaml
+++ b/configs/challenge_objectnav2021.local.rgbd.yaml
@@ -51,5 +51,5 @@ DATASET:
   SPLIT: val
   # DATA_PATH: habitat-challenge-data/data/{split}/{split}.json.gz
   # SCENES_DIR: "habitat-challenge-data/data/scene_datasets/"
-  DATA_PATH: /your/path/to/MatterPort3D/objectnav/mp3d/v1/{split}/{split}.json.gz
-  SCENES_DIR: "/your/path/to/MatterPort3D/"
+  DATA_PATH: /path/to/MatterPort3D/objectnav/mp3d/v1/{split}/{split}.json.gz
+  SCENES_DIR: "/path/to/MatterPort3D/"
