--- a/configs/challenge_objectnav2021.local.rgbd.yaml
+++ b/configs/challenge_objectnav2021.local.rgbd.yaml
@@ -50,4 +50,4 @@ DATASET:
   TYPE: ObjectNav-v1
   SPLIT: val
   DATA_PATH: /path/to/MatterPort3D/objectnav/mp3d/v1/{split}/{split}.json.gz
-  SCENES_DIR: "/path/to/MatterPort3D/"
+  SCENES_DIR: /path/to/MatterPort3D/
