--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ glip_large_model.pth
 /GLIP/maskrcnn_benchmark.egg-info
 /segment_anything/segment_anything.egg-info/
 *.so
+segment_anything/sam_vit_h_4b8939.pth
+GroundingDINO/groundingdino_swint_ogc.pth
